# working_mnist

./: Makefile  README.md  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: tests.yml
dockerfiles/: trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: checkpoint.pth
tests/: test_data.py  test_model.py  test_predict  test_training.py
working_mnist/: __init__.py  predict_model.py  train_model.py
working_mnist/data/: make_dataset.py
working_mnist/models/: model.py
