[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "working_mnist"
version = "0.0.1"
description = "MNIST classification with pytorch"
authors = [
  { name = "Alexander Voldby", email = "your@email.com" },
]

readme = "README.md"
requires-python = "~=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["working_mnist"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
